# kizuna-lang

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/compiler/: ast.rs  grammar.lalrpop  parser.rs
src/runtime/: func.rs  interpreter.rs  mod.rs  scope.rs  vm.rs
