[package]
edition = "2021"
name = "kizuna"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
lalrpop-util = {version = "0.20.2", features = ["lexer", "unicode"]}
serde = {version = "1.0.203", features = ["serde_derive"]}
snap = "1.1.1"

[build-dependencies]
lalrpop = "0.20.2"

[profile.release]
debug = 0
debug-assertions = false
incremental = false
opt-level = 'z'
overflow-checks = true
strip = "debuginfo"
